--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   sqflite: ^1.3.1
   path_provider: ^1.6.11
   intl: ^0.16.1
+  share: ^0.6.4+3
+  flushbar: ^1.10.4
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
